--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="com.trexin" android:versionCode="1" android:versionName="1.0">
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+
     <application android:label="Trexin" android:icon="@drawable/circle" android:debuggable="true">
         <activity android:name=".TrexinMobile" android:label="@string/app_name">
             <intent-filter>
@@ -9,7 +12,7 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".WebViewScreen" android:label="@string/mentor_program" />
+        <activity android:name=".LoginOffice365" android:label="@string/login" />
         <activity android:name=".Dashboard" android:label="@string/dashboard" />
     </application>
 </manifest>
