--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3,6 +3,8 @@
       package="com.trexin" android:versionCode="1" android:versionName="1.0">
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <!-- Developed and tested on Android 4.0.3 (ICE_CREAM_SANDWICH_MR1) -->
+    <uses-sdk android:minSdkVersion="15"/>
 
     <application android:label="Trexin" android:icon="@drawable/circle" android:debuggable="true">
         <activity android:name=".TrexinMobile" android:label="@string/app_name">
