--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3,6 +3,7 @@
       package="com.trexin" android:versionCode="1" android:versionName="1.0">
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.DOWNLOAD_WITHOUT_NOTIFICATION"/>
     <!-- Developed and tested on Android 4.0.3 (ICE_CREAM_SANDWICH_MR1) -->
     <uses-sdk android:minSdkVersion="15"/>
 
